--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,59 +7,24 @@ endif()
 
 set(CMAKE_INSTALL_PREFIX "${PROJECT_BINARY_DIR}" CACHE INTERNAL "Install target is not defined.")
 
+#################################################
 project(C1-Launcher VERSION 2.3 LANGUAGES CXX RC)
+#################################################
 
 if(NOT MSVC)
 	message(FATAL_ERROR "MSVC is the only supported compiler!")
 endif()
 
+# detect 64-bit compiler
 if(CMAKE_SIZEOF_VOID_P EQUAL 8)
 	set(BUILD_64BIT TRUE)
-	message(STATUS "c1-launcher: 64-bit build")
+	message(STATUS "64-bit build")
 else()
-	message(STATUS "c1-launcher: 32-bit build")
+	message(STATUS "32-bit build")
 endif()
 
 # prevent modern MSVC from enabling ASLR
 set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} /DYNAMICBASE:NO")
-
-option(C1LAUNCHER_GAME_LAUNCHER "Build game launcher - Crysis.exe" ON)
-if(C1LAUNCHER_GAME_LAUNCHER)
-	add_executable(Crysis WIN32
-	  Code/Launcher/Game/Main.cpp
-	  Code/Launcher/Patch.cpp
-	  Code/Launcher/Util.cpp
-	  Resources/GameLauncher.rc
-	)
-	target_include_directories(Crysis PRIVATE
-	  Code/Launcher
-	  Code/CryEngine/CryCommon
-	  Code/CryEngine/CryAction
-	  ${PROJECT_BINARY_DIR}
-	)
-	if(BUILD_64BIT)
-		target_compile_definitions(Crysis PRIVATE BUILD_64BIT)
-	endif()
-endif()
-
-option(C1LAUNCHER_SERVER_LAUNCHER "Build dedicated server launcher - CrysisDedicatedServer.exe" ON)
-if(C1LAUNCHER_SERVER_LAUNCHER)
-	add_executable(CrysisDedicatedServer WIN32
-	  Code/Launcher/DedicatedServer/Main.cpp
-	  Code/Launcher/Patch.cpp
-	  Code/Launcher/Util.cpp
-	  Resources/DedicatedServerLauncher.rc
-	)
-	target_include_directories(CrysisDedicatedServer PRIVATE
-	  Code/Launcher
-	  Code/CryEngine/CryCommon
-	  Code/CryEngine/CryAction
-	  ${PROJECT_BINARY_DIR}
-	)
-	if(BUILD_64BIT)
-		target_compile_definitions(CrysisDedicatedServer PRIVATE BUILD_64BIT)
-	endif()
-endif()
 
 option(C1LAUNCHER_STATIC_MSVC_RUNTIME "Enable static link of MSVC runtime library." ON)
 if(C1LAUNCHER_STATIC_MSVC_RUNTIME)
@@ -76,3 +41,41 @@ if(C1LAUNCHER_STATIC_MSVC_RUNTIME)
 endif()
 
 configure_file(config.h.in ${PROJECT_BINARY_DIR}/config.h)
+
+add_library(LauncherBase STATIC
+  Code/CryCommon/IGameRef.h
+  Code/CryCommon/IGameStartup.h
+  Code/CryCommon/ISystem.h
+  Code/Launcher/CPU.cpp
+  Code/Launcher/CPU.h
+  Code/Launcher/DLL.cpp
+  Code/Launcher/DLL.h
+  Code/Launcher/Launcher.cpp
+  Code/Launcher/Launcher.h
+  Code/Launcher/Patch.cpp
+  Code/Launcher/Patch.h
+  Code/Launcher/StringBuffer.h
+  Code/Launcher/Util.cpp
+  Code/Launcher/Util.h
+)
+
+target_include_directories(LauncherBase PUBLIC Code ${PROJECT_BINARY_DIR})
+
+if(BUILD_64BIT)
+	target_compile_definitions(LauncherBase PUBLIC BUILD_64BIT)
+endif()
+
+add_executable(Crysis WIN32
+  Code/Launcher/Game/Main.cpp
+  Code/Launcher/Game/Resources.h
+  Resources/GameLauncher.rc
+)
+
+add_executable(CrysisDedicatedServer WIN32
+  Code/Launcher/DedicatedServer/Main.cpp
+  Code/Launcher/DedicatedServer/Resources.h
+  Resources/DedicatedServerLauncher.rc
+)
+
+target_link_libraries(Crysis                LauncherBase)
+target_link_libraries(CrysisDedicatedServer LauncherBase)
