Add gamespy patch Change icon to Crysis Wars Bump version to 2.4

--- a/config.h.in
+++ b/config.h.in
@@ -17,4 +17,4 @@
 #define C1LAUNCHER_BITS "32-bit"
 #endif
 
-#define C1LAUNCHER_VERSION_DESCRIPTION "C1-Launcher " C1LAUNCHER_VERSION_STRING " " C1LAUNCHER_BITS
+#define C1LAUNCHER_VERSION_DESCRIPTION "CW-Launcher " C1LAUNCHER_VERSION_STRING " " C1LAUNCHER_BITS
