--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,7 @@
 cmake_minimum_required(VERSION 3.15)
 
 #################################################
-project(C1-Launcher VERSION 2.3 LANGUAGES CXX RC)
+project(CW-Launcher VERSION 2.4 LANGUAGES CXX RC)
 #################################################
 
 if(NOT MSVC)
