--- a/config.h.in
+++ b/config.h.in
@@ -6,15 +6,15 @@
 
 #pragma once
 
-#define C1LAUNCHER_VERSION_MAJOR @PROJECT_VERSION_MAJOR@
-#define C1LAUNCHER_VERSION_MINOR @PROJECT_VERSION_MINOR@
+#define CWLAUNCHER_VERSION_MAJOR @PROJECT_VERSION_MAJOR@
+#define CWLAUNCHER_VERSION_MINOR @PROJECT_VERSION_MINOR@
 
-#define C1LAUNCHER_VERSION_STRING "@PROJECT_VERSION_MAJOR@.@PROJECT_VERSION_MINOR@"
+#define CWLAUNCHER_VERSION_STRING "@PROJECT_VERSION_MAJOR@.@PROJECT_VERSION_MINOR@"
 
 #ifdef BUILD_64BIT
-#define C1LAUNCHER_BITS "64-bit"
+#define CWLAUNCHER_BITS "64-bit"
 #else
-#define C1LAUNCHER_BITS "32-bit"
+#define CWLAUNCHER_BITS "32-bit"
 #endif
 
-#define C1LAUNCHER_VERSION_DESCRIPTION "CW-Launcher " C1LAUNCHER_VERSION_STRING " " C1LAUNCHER_BITS
+#define CWLAUNCHER_VERSION_DESCRIPTION "CW-Launcher " CWLAUNCHER_VERSION_STRING " " CWLAUNCHER_BITS
