--- a/Resources/DedicatedServerLauncher.rc
+++ b/Resources/DedicatedServerLauncher.rc
@@ -8,8 +8,8 @@
 LAUNCHER_ICON ICON "DedicatedServerIcon.ico"
 
 VS_VERSION_INFO VERSIONINFO
-FILEVERSION     C1LAUNCHER_VERSION_MAJOR, C1LAUNCHER_VERSION_MINOR, 0, 0
-PRODUCTVERSION  C1LAUNCHER_VERSION_MAJOR, C1LAUNCHER_VERSION_MINOR, 0, 0
+FILEVERSION     CWLAUNCHER_VERSION_MAJOR, CWLAUNCHER_VERSION_MINOR, 0, 0
+PRODUCTVERSION  CWLAUNCHER_VERSION_MAJOR, CWLAUNCHER_VERSION_MINOR, 0, 0
 FILEOS          VOS__WINDOWS32
 FILETYPE        VFT_APP
 BEGIN
@@ -17,16 +17,16 @@ BEGIN
 	BEGIN
 		BLOCK "040904E4"
 		BEGIN
-			VALUE "ProductName",      "C1-Launcher"
-			VALUE "ProductVersion",   C1LAUNCHER_VERSION_STRING
-			VALUE "FileVersion",      C1LAUNCHER_VERSION_STRING
+			VALUE "ProductName",      "CW-Launcher"
+			VALUE "ProductVersion",   CWLAUNCHER_VERSION_STRING
+			VALUE "FileVersion",      CWLAUNCHER_VERSION_STRING
 		#ifdef BUILD_64BIT
-			VALUE "FileDescription",  "Crysis Dedicated Server (64-bit)"
+			VALUE "FileDescription",  "Crysis Wars Dedicated Server (64-bit)"
 		#else
-			VALUE "FileDescription",  "Crysis Dedicated Server (32-bit)"
+			VALUE "FileDescription",  "Crysis Wars Dedicated Server (32-bit)"
 		#endif
-			VALUE "InternalName",     "CrysisDedicatedServer"
-			VALUE "OriginalFilename", "CrysisDedicatedServer.exe"
+			VALUE "InternalName",     "CrysisWarsDedicatedServer"
+			VALUE "OriginalFilename", "CrysisWarsDedicatedServer.exe"
 		END
 	END
 
