Final refactoring and preparation for Crysis Warhead support

--- a/Resources/GameLauncher.rc
+++ b/Resources/GameLauncher.rc
@@ -5,13 +5,13 @@
 #include "Launcher/Game/Resources.h"
 #include "config.h"
 
-LAUNCHER_ICON ICON "GameIcon.ico"
+GAME_ICON ICON "GameIcon.ico"
 
-LAUNCHER_CURSOR_AMBER CURSOR "CursorAmber.cur"
-LAUNCHER_CURSOR_BLUE  CURSOR "CursorBlue.cur"
-LAUNCHER_CURSOR_GREEN CURSOR "CursorGreen.cur"
-LAUNCHER_CURSOR_RED   CURSOR "CursorRed.cur"
-LAUNCHER_CURSOR_WHITE CURSOR "CursorWhite.cur"
+GAME_CURSOR_AMBER CURSOR "CursorAmber.cur"
+GAME_CURSOR_BLUE  CURSOR "CursorBlue.cur"
+GAME_CURSOR_GREEN CURSOR "CursorGreen.cur"
+GAME_CURSOR_RED   CURSOR "CursorRed.cur"
+GAME_CURSOR_WHITE CURSOR "CursorWhite.cur"
 
 VS_VERSION_INFO VERSIONINFO
 FILEVERSION     C1LAUNCHER_VERSION_MAJOR, C1LAUNCHER_VERSION_MINOR, 0, 0
