--- a/Resources/DedicatedServerLauncher.rc
+++ b/Resources/DedicatedServerLauncher.rc
@@ -20,11 +20,7 @@ BEGIN
 			VALUE "ProductName",      "C1-Launcher"
 			VALUE "ProductVersion",   C1LAUNCHER_VERSION_STRING
 			VALUE "FileVersion",      C1LAUNCHER_VERSION_STRING
-		#ifdef BUILD_64BIT
-			VALUE "FileDescription",  "Crysis Dedicated Server (64-bit)"
-		#else
-			VALUE "FileDescription",  "Crysis Dedicated Server (32-bit)"
-		#endif
+			VALUE "FileDescription",  "Crysis Dedicated Server"
 			VALUE "InternalName",     "CrysisDedicatedServer"
 			VALUE "OriginalFilename", "CrysisDedicatedServer.exe"
 		END
