--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -9,8 +9,6 @@ on:
       - "*"
   schedule:
     - cron: "0 0 1 */3 *" # trigger automatically every three months at 00:00
-env:
-  BUILD_TYPE: Release
 
 jobs:
   build:
@@ -19,19 +17,31 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
-      - name: Build Bin32
-        run: |
-          cmake -G "Visual Studio 16 2019" -A Win32 -B ${{github.workspace}}\build\Bin32
-          cmake --build ${{github.workspace}}\build\Bin32 --config ${{env.BUILD_TYPE}}
-          mkdir ${{github.workspace}}\bin\Bin32\
-          move "${{github.workspace}}\build\Bin32\Release\*.exe" "${{github.workspace}}\bin\Bin32\"
+      - name: Setup32
+        uses: ilammy/msvc-dev-cmd@v1.9.0
+        with:
+          arch: x86
 
-      - name: Build Bin64
+      - name: Build32
         run: |
-          cmake -G "Visual Studio 16 2019" -A x64 -B ${{github.workspace}}\build\Bin64
-          cmake --build ${{github.workspace}}\build\Bin64 --config ${{env.BUILD_TYPE}}
+          cmake -G "NMake Makefiles" -B ${{github.workspace}}\build\Bin32 -D CMAKE_MSVC_RUNTIME_LIBRARY=MultiThreadedDLL -D CMAKE_BUILD_TYPE=Release
+          cd ${{github.workspace}}\build\Bin32\
+          nmake
+          mkdir ${{github.workspace}}\bin\Bin32\
+          move "${{github.workspace}}\build\Bin32\*.exe" "${{github.workspace}}\bin\Bin32\"
+
+      - name: Setup64
+        uses: ilammy/msvc-dev-cmd@v1.9.0
+        with:
+          arch: x64
+
+      - name: Build64
+        run: |
+          cmake -G "NMake Makefiles" -B ${{github.workspace}}\build\Bin64 -D CMAKE_MSVC_RUNTIME_LIBRARY=MultiThreadedDLL -D CMAKE_BUILD_TYPE=Release
+          cd ${{github.workspace}}\build\Bin64\
+          nmake
           mkdir ${{github.workspace}}\bin\Bin64\
-          move "${{github.workspace}}\build\Bin64\Release\*.exe" "${{github.workspace}}\bin\Bin64\"
+          move "${{github.workspace}}\build\Bin64\*.exe" "${{github.workspace}}\bin\Bin64\"
 
       - name: Get branch name (merge)
         if: github.event_name != 'pull_request'
@@ -46,5 +56,5 @@ jobs:
       - name: Upload artifact
         uses: actions/upload-artifact@v2
         with:
-          name: c1-launcher-current-build-${{ env.BRANCH_NAME }}
+          name: c1-launcher-current-build-${{env.BRANCH_NAME}}
           path: ${{github.workspace}}\bin\*
