--- a/Resources/GameLauncher.rc
+++ b/Resources/GameLauncher.rc
@@ -5,13 +5,13 @@
 #include "Launcher/Game/Resources.h"
 #include "config.h"
 
-LAUNCHER_ICON ICON "GameIcon.ico"
+RESOURCE_ICON ICON "GameIcon.ico"
 
-LAUNCHER_CURSOR_AMBER CURSOR "CursorAmber.cur"
-LAUNCHER_CURSOR_BLUE  CURSOR "CursorBlue.cur"
-LAUNCHER_CURSOR_GREEN CURSOR "CursorGreen.cur"
-LAUNCHER_CURSOR_RED   CURSOR "CursorRed.cur"
-LAUNCHER_CURSOR_WHITE CURSOR "CursorWhite.cur"
+RESOURCE_CURSOR_AMBER CURSOR "CursorAmber.cur"
+RESOURCE_CURSOR_BLUE  CURSOR "CursorBlue.cur"
+RESOURCE_CURSOR_GREEN CURSOR "CursorGreen.cur"
+RESOURCE_CURSOR_RED   CURSOR "CursorRed.cur"
+RESOURCE_CURSOR_WHITE CURSOR "CursorWhite.cur"
 
 VS_VERSION_INFO VERSIONINFO
 FILEVERSION     CWLAUNCHER_VERSION_MAJOR, CWLAUNCHER_VERSION_MINOR, 0, 0
