--- a/Resources/DedicatedServerLauncher.rc
+++ b/Resources/DedicatedServerLauncher.rc
@@ -5,7 +5,7 @@
 #include "Launcher/DedicatedServer/Resources.h"
 #include "config.h"
 
-LAUNCHER_ICON ICON "DedicatedServerIcon.ico"
+RESOURCE_ICON ICON "DedicatedServerIcon.ico"
 
 VS_VERSION_INFO VERSIONINFO
 FILEVERSION     CWLAUNCHER_VERSION_MAJOR, CWLAUNCHER_VERSION_MINOR, 0, 0
