Single number version

--- a/Project.h.in
+++ b/Project.h.in
@@ -6,14 +6,11 @@
 
 #pragma once
 
-#define PROJECT_VERSION_MAJOR @PROJECT_VERSION_MAJOR@
-#define PROJECT_VERSION_MINOR @PROJECT_VERSION_MINOR@
+#define PROJECT_VERSION @PROJECT_VERSION_MAJOR@
+#define PROJECT_VERSION_STRING "@PROJECT_VERSION_MAJOR@"
 
-#define PROJECT_VERSION_STRING "@PROJECT_VERSION_MAJOR@.@PROJECT_VERSION_MINOR@"
-
-#define PROJECT_MAKE_VERSION_DETAILS(name) name ## \
-	" [v@PROJECT_VERSION_MAJOR@.@PROJECT_VERSION_MINOR@]" \
-	" [@BUILD_BITS@-bit] [@CMAKE_BUILD_TYPE@] [" __DATE__ " " __TIME__ "]"
+#define PROJECT_MAKE_VERSION_DETAILS(name) name \
+	" [v@PROJECT_VERSION_MAJOR@] [@BUILD_BITS@-bit] [@CMAKE_BUILD_TYPE@] [" __DATE__ " " __TIME__ "]"
 
 // defined in Main.cpp of each launcher
 extern const char* const PROJECT_VERSION_DETAILS;
