--- a/Resources/DedicatedServerLauncher.rc
+++ b/Resources/DedicatedServerLauncher.rc
@@ -9,8 +9,8 @@
 RESOURCE_ICON ICON "DedicatedServerIcon.ico"
 
 VS_VERSION_INFO VERSIONINFO
-FILEVERSION     PROJECT_VERSION_MAJOR, PROJECT_VERSION_MINOR, 0, 0
-PRODUCTVERSION  PROJECT_VERSION_MAJOR, PROJECT_VERSION_MINOR, 0, 0
+FILEVERSION     PROJECT_VERSION, 0, 0, 0
+PRODUCTVERSION  PROJECT_VERSION, 0, 0, 0
 FILEOS          VOS__WINDOWS32
 FILETYPE        VFT_APP
 BEGIN
