--- a/Resources/HeadlessServerLauncher.rc
+++ b/Resources/HeadlessServerLauncher.rc
@@ -5,8 +5,8 @@
 #include "Project.h"
 
 VS_VERSION_INFO VERSIONINFO
-FILEVERSION     PROJECT_VERSION_MAJOR, PROJECT_VERSION_MINOR, 0, 0
-PRODUCTVERSION  PROJECT_VERSION_MAJOR, PROJECT_VERSION_MINOR, 0, 0
+FILEVERSION     PROJECT_VERSION, 0, 0, 0
+PRODUCTVERSION  PROJECT_VERSION, 0, 0, 0
 FILEOS          VOS__WINDOWS32
 FILETYPE        VFT_APP
 BEGIN
