--- a/Resources/GameLauncher.rc
+++ b/Resources/GameLauncher.rc
@@ -15,8 +15,8 @@ RESOURCE_CURSOR_RED   CURSOR "CursorRed.cur"
 RESOURCE_CURSOR_WHITE CURSOR "CursorWhite.cur"
 
 VS_VERSION_INFO VERSIONINFO
-FILEVERSION     PROJECT_VERSION_MAJOR, PROJECT_VERSION_MINOR, 0, 0
-PRODUCTVERSION  PROJECT_VERSION_MAJOR, PROJECT_VERSION_MINOR, 0, 0
+FILEVERSION     PROJECT_VERSION, 0, 0, 0
+PRODUCTVERSION  PROJECT_VERSION, 0, 0, 0
 FILEOS          VOS__WINDOWS32
 FILETYPE        VFT_APP
 BEGIN
